<resources>
    <string name="addevent_title">Título</string>
    <string name="addevent_date">Fecha (YYYY-MM-DD)</string>
    <string name="addevent_hour">Hora (HH:MM)</string>
    <string name="addevent_location">Localización</string>
    <string name="addevent_description">Descripción</string>
    <string name="addevent_string">Crear Evento</string>
    <string name="addevent_buttonString">Guardar Evento</string>
    <string name="addevent_datePickerTitle">Selecciona una fecha</string>
    <string name="addevent_timePickerTitle">Selecciona una hora</string>
    <string name="addevent_timePickerEmoji" translatable="false">⏰</string>
    <string name="add_student_title">Añadir Estudiante</string>
    <string name="add_student_name_hint">*Nombre</string>
    <string name="add_student_surnames_hint">*Apellidos</string>
    <string name="add_student_birthdate_hint">*Fecha de nacimiento</string>
    <string name="add_student_weight_hint">Peso</string>
    <string name="add_student_height_hint">Altura</string>
    <string name="add_student_allergens_hint">Alérgenos</string>
    <string name="add_parent">Añadir Padre/Tutor</string>
    <string name="add_student_medical_conditions_hint">Condiciones médicas</string>
    <string name="add_student_save_button_text">Crear estudiante y padre o tutor</string>
    <string name="add_parent_name_hint">*Nombre de padre/tutor</string>
    <string name="add_secondary_parent_name_hint">Nombre de otro padre/tutor</string>
    <string name="add_parent_surnames_hint">*Apellidos de padre/tutor</string>
    <string name="add_parent_gender_hint">*Género</string>
    <string name="add_secondary_parent_surnames">Apellidos de otro padre/tutor</string>
    <string name="add_parent_email_hint">*Correo electrónico</string>
    <string name="add_parent_address_hint">*Dirección</string>
    <string name="add_primary_phone_hint">*Teléfono principal</string>
    <string name="add_secondary_phone_hint">Teléfono auxiliar</string>
    <string name="add_tertiary_phone_hint">Teléfono auxiliar</string>
    <string name="add_student_toast_empty">Por favor, rellene todos los campos obligatorios (los que tienen *)</string>
    <string name="add_student_toast_error">No se puede crear el estudiante</string>
    <string name="classroom_loading_string">Cargando…</string>
    <string name="classroom_results_string">Resultados</string>
    <string name="classroom_no_students_string">No hay estudiantes</string>
    <string name="classroom_search_error">Error al buscar los estudiantes de la clase</string>
    <string name="classroom_searchview_queryhint">Buscar estudiante</string>
    <string name="student_name" translatable="false">%1$s %2$s</string>
    <string name="student_contact">Contacto rápido: %1$s</string>
    <string name="student_no_data">sin datos</string>
    <string name="createteacher_titleView">¡Bienvenid@ Profe!</string>
    <string name="createteacher_nameText">Nombre</string>
    <string name="createteacher_surnameText">Apellidos</string>
    <string name="createteacher_genderText">Género</string>
    <string name="createteacher_emailText">Correo Electrónico</string>
    <string name="createteacher_passwordText">Contraseña</string>
    <string name="createteacher_ButtonCreateTeacherText">Crear cuenta de profesor</string>
    <string name="createteacher_namehint">Tu nombre</string>
    <string name="createteacher_surnameEditText">Tus apellidos</string>
    <string name="createteacher_genderEditText">Tu género</string>
    <string name="createteacher_emailEditText">Tu correo electrónico</string>
    <string name="createteacher_passwordEditText">Tu contraseña</string>
    <string name="createteacher_filledFieldError">Este campo es obligatorio</string>
    <string name="createteacher_teacherAuthError">Este correo ya se encuentra asociado a un usuario</string>
    <string name="createteacher_mailFormatError">Este no es un formato de correo válido</string>
    <string name="createteacher_passwordFormatError">La contraseña debe tener al menos 6 caracteres</string>
    <string name="edit_profile_buttonText">Editar perfil</string>
    <string name="edit_profile_searching_user">Buscando usuario…</string>
    <string name="edit_profile_search_error">Error al buscar la información del usuario</string>
    <string name="edit_profile_modifying">Editando…</string>
    <string name="edit_profile_correctly_modified">Se modificó correctamente al usuario</string>
    <string name="edit_profile_error_modifying">Se produjo un error modificando al usuario %1$s %2$s.</string>
    <string name="editstudent_direccionEditText">Dirección</string>
    <string name="editstudent_alergiasEditText">Alergias</string>
    <string name="editstudent_dianacEditText">Día de nacimiento</string>
    <string name="editstudent_alturaEditText">Altura</string>
    <string name="editstudent_condmedEditText">Condiciones médicas</string>
    <string name="editstudent_nombreEditText">Nombre de el estudiante</string>
    <string name="editstudent_contactorapidoEditText">Contacto principal</string>
    <string name="editstudent_apellidosEditText">Apellidos de el estudiante</string>
    <string name="editstudent_pesoEditText">Peso</string>
    <string name="editstudent_telefaux1EditText">Teléfono auxiliar 1</string>
    <string name="editstudent_telefaux2EditText">Teléfono auxiliar 2</string>
    <string name="editstudent_text">Introduzca los datos a modificar</string>
    <string name="editstudent_direcciontextView">Introduzca la dirección</string>
    <string name="editstudent_alergiastextView">Introduzca las alergias</string>
    <string name="editstudent_dianactextView">Introduzca el día de nacimiento</string>
    <string name="editstudent_alturatextView">Introduzca la altura</string>
    <string name="editstudent_condmedtextView">Introduzca las condiciones médicas</string>
    <string name="editstudent_nombretextView">Introduzca el nombre de el/la estudiante</string>
    <string name="editstudent_contactorapidotextView">Introduzca el contacto principal</string>
    <string name="editstudent_apellidostextView">Introduzca los apellidos de el estudiante</string>
    <string name="editstudent_pesotextView">Introduzca el peso</string>
    <string name="editstudent_telefaux1textView">Introduzca un teléfono auxiliar</string>
    <string name="editstudent_telefaux2textView">Introduzca un teléfono auxiliar</string>
    <string name="editstudent_button">Actualizar datos</string>
    <string name="editstudent_successUpdate">Información actualizada correctamente</string>
    <string name="editstudent_errorStudentData">Error recogiendo los datos del alumno</string>
    <string name="editstudent_errorDateFormat">Formato de fecha incorrecto, debe ser DD/MM/YYYY</string>
    <string name="editstudent_errorDoubleFormat">El texto debe estar conformado por números y/o puntos</string>
    <string name="editstudent_errorPhoneFormat">Teléfono incorrecto, debe tener 9 carácteres</string>
    <string name="editstudent_errorUpdate">Error al actualizar la información, porfavor vuelva a intentarlo</string>
    <string name="grade_subject_intro_text">Calificar nota</string>
    <string name="grade_subject_grade_text">Nota</string>
    <string name="grade_subject_send_grade_text">Enviar nota</string>
    <string name="grade_subject_hint_text" translatable="false">5.00</string>
    <string name="searching_class">Buscando clase…</string>
    <string name="class_search_error">Error al buscar la información de la clase</string>
    <string name="grade_subject_no_selected">Por favor, seleccione una asignatura</string>
    <string name="grade_subject_no_mark">Por favor, califique al estudiante</string>
    <string name="grade_subject_grading_mark">Calificando…</string>
    <string name="grade_subject_correctly_graded">Se califico correctamente al estudiante %1$s.</string>
    <string name="grade_subject_error_grading">Se produjo un error calificando al estudiante %1$s.</string>
    <string name="grade_subject_incorrect_grading">Calificación incorrecta, debe encontrarse entre 0 y 10.</string>
    <string name="app_name" translatable="false">Azalea</string>
    <string name="app_name_mayus" translatable="false">AZALEA</string>
    <string name="login_username_hint">Correo electrónico</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_button_login_text">Iniciar sesión</string>
    <string name="login_recover_password"><u>¿Has olvidado tu contraseña?</u></string>
    <string name="login_create_teacher_text">¿No tienes cuenta de profesor?</string>
    <string name="login_create_button">Crear</string>
    <string name="login_error">Error al iniciar sesión, vuelva a introducir los datos</string>
    <string name="conexion_perdida">Conexión perdida</string>
    <string name="conexion_recuperada">Conexión disponible</string>
    <string name="modifyevent_buttonString">Modificar</string>
    <string name="modifyevent_string">Modificar Evento</string>
    <string name="modifyevent_toastCorrect">Evento creado correctamente</string>
    <string name="modifyevent_toastIncorrect">Error al modificar el evento. Inténtelo de nuevo</string>
    <string name="modifyevent_toastNoData">No se han recibido datos</string>
    <string name="modifyevent_toastTitleEmpty">El título no puede estar vacío</string>
    <string name="modifyevent_toastDateEmpty">La fecha no puede estar vacía</string>
    <string name="parent_recyclerView_empty">No hay eventos</string>
    <string name="parent_recyclerView_title">Titulo Evento</string>
    <string name="parent_recyclerView_date">Fecha</string>
    <string name="parent_recyclerView_time">Hora</string>
    <string name="parent_recyclerView_location">Ubicación</string>
    <string name="parent_recyclerView_description">Descripción</string>
    <string name="parent_separator" translatable="false"> | </string>
    <string name="parent_recyclerView_result">Resultados</string>
    <string name="parent_recyclerView_titleEvent">eventos</string>
    <string name="parent_recyclerView_modify">Modificar</string>
    <string name="passwordRecovery_button">Restablecer Contraseña</string>
    <string name="passwordRecovery_text"><u>¿Has olvidado tu contraseña?</u></string>
    <string name="passwordRecovery_hint">Correo electrónico:</string>
    <string name="passwordRecovery_success">Se ha enviado el correo de recuperación</string>
    <string name="passwordRecovery_error">Este correo no se encuentra en la base de datos</string>
    <string name="show_grades_no_marks">No hay calificaciones</string>
    <string name="student_name_text">Nombre del estudiante</string>
    <string name="student_send_message_button">Mensaje</string>
    <string name="student_grade_mark_button">Calificar</string>
    <string name="student_show_grades_button">Notas</string>
    <string name="student_edit_student_button">Editar</string>
    <string name="student_info_text">Información del estudiante</string>
    <string name="student_birthday_text">Fecha de nacimiento: %1$s</string>
    <string name="student_weight_text">Peso: %1$s</string>
    <string name="student_height_text">Altura: %1$s</string>
    <string name="student_allergens_text">Alérgenos: %1$s</string>
    <string name="student_medical_conditions_text">Condiciones médicas: %1$s</string>
    <string name="student_contact_info_text">Información de contacto </string>
    <string name="student_parent_name_text">Nombre(s) del/los tutor(es): %1$s</string>
    <string name="student_phone_text">Teléfono(s) auxiliar(es): %1$s</string>
    <string name="student_primary_phone_text">Teléfono principal: %1$s</string>
    <string name="student_email_text">Correo electrónico: %1$s</string>
    <string name="student_address_text">Dirección: %1$s</string>
    <string name="searching_student">Buscando estudiante…</string>
    <string name="addevent_datePickerEmoji" translatable="false">📅</string>
</resources>