<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Seashell"
    android:padding="16dp">

    <!-- Título del fragment -->
    <TextView
        android:id="@+id/modifyEvent_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modifyevent_string"
        android:textColor="@color/Dark_Purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/modifyEvent_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Campo de título -->
    <EditText
        android:id="@+id/modifyEvent_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Tickle_me_Pink"
        android:hint="@string/addevent_title"
        android:padding="12dp"
        android:textColor="@color/Dark_Purple"
        android:textColorHint="@color/Orchid_Pink"
        app:layout_constraintBottom_toTopOf="@+id/modifyEvent_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyEvent_string" />

    <!-- Campo de descripción -->
    <EditText
        android:id="@+id/modifyEvent_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Tickle_me_Pink"
        android:hint="@string/addevent_description"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:padding="12dp"
        android:textColor="@color/Dark_Purple"
        android:textColorHint="@color/Orchid_Pink"
        app:layout_constraintBottom_toTopOf="@+id/modifyEvent_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyEvent_title" />

    <!-- Campo de fecha con botón para seleccionarla -->
    <TextView
        android:id="@+id/modifyEvent_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/addevent_date"
        android:textColor="@color/Dark_Purple"
        android:textColorHint="@color/Orchid_Pink"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/modifyEvent_time"
        app:layout_constraintEnd_toStartOf="@+id/modifyEvent_date_picker"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyEvent_description" />

    <Button
        android:id="@+id/modifyEvent_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Cyclomen"
        android:text="@string/addevent_datePickerEmoji"
        android:textColor="@color/Seashell"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/modifyEvent_date"
        app:layout_constraintEnd_toEndOf="@+id/modifyEvent_time_picker"
        app:layout_constraintTop_toTopOf="@id/modifyEvent_date" />

    <!-- Campo de hora con botón para seleccionarla -->
    <TextView
        android:id="@+id/modifyEvent_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/addevent_hour"
        android:textColor="@color/Dark_Purple"
        android:textColorHint="@color/Orchid_Pink"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/modifyEvent_location"
        app:layout_constraintEnd_toStartOf="@+id/modifyEvent_time_picker"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyEvent_date" />

    <Button
        android:id="@+id/modifyEvent_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Cyclomen"
        android:text="@string/addevent_timePickerEmoji"
        android:textColor="@color/Seashell"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/modifyEvent_time"
        app:layout_constraintStart_toEndOf="@+id/modifyEvent_time"
        app:layout_constraintTop_toTopOf="@id/modifyEvent_time" />

    <!-- Campo de ubicación -->
    <EditText
        android:id="@+id/modifyEvent_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Tickle_me_Pink"
        android:hint="@string/addevent_location"
        android:padding="12dp"
        android:textColor="@color/Dark_Purple"
        android:textColorHint="@color/Orchid_Pink"
        app:layout_constraintBottom_toTopOf="@+id/modifyEvent_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyEvent_time" />

    <!-- Botón para guardar los cambios -->
    <Button
        android:id="@+id/modifyEvent_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/French_Rose"
        android:padding="12dp"
        android:text="@string/modifyevent_buttonString"
        android:textColor="@color/Seashell"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyEvent_location" />

</androidx.constraintlayout.widget.ConstraintLayout>
